deploy/k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ingest-app
  name: ingest-app
  namespace: trading-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingest-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ingest-app
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
      containers:
      - image: ghcr.io/rysekk/low-latency-app:0.2
        name: ingest-app
        ports:
        - name: metrics
          containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
