deploy/k8s/deployment-prom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: trading-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
      containers:
      - image: prom/prometheus:v3.13.2
        name: prometheus
        ports:
        - name: metrics
          containerPort: 9090
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--storage.tsdb.path=/prometheus"
          - "--storage.tsdb.retention.time=30d"
        volumeMounts:
          - name: vol-prom
            mountPath: /etc/prometheus/
          - name: prometheus-data
            mountPath: /prometheus
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
      volumes:
        - name: vol-prom
          configMap:
            name: prometheus
        - name: prometheus-data
          emptyDir: {}
